kubernetes/apps/adguard/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
  labels:
    app: adguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: adguard
        image: adguard/adguardhome:latest
        ports:
          - containerPort: 53
            hostPort: 53
            protocol: UDP
          - containerPort: 53
            hostPort: 53
            protocol: TCP
          - containerPort: 3000
            hostPort: 3000
            protocol: TCP  # Web UI
        volumeMounts:
        - mountPath: /opt/adguardhome/conf
          name: config
        - mountPath: /opt/adguardhome/work
          name: work
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: adguard-config
      - name: work
        emptyDir: {}
