kubernetes/apps/adguard/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: adguard
  labels:
    app: adguard
spec:
  selector:
    app: adguard
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    protocol: TCP
